toolchain/internal/core/analysis/testdata/errors/naming/enum_member_not_pascal.vdl
// fmt:off
// @expect: E104

enum Status {
	active
	inactive
}
